[gd_scene load_steps=4 format=3 uid="uid://csmq6tovr1bcg"]

[ext_resource type="Texture2D" uid="uid://b580m2j7aow04" path="res://art/Tower_Weapon_3.png" id="1_gqyjf"]
[ext_resource type="Script" path="res://waver_turret.gd" id="1_grjjj"]
[ext_resource type="PackedScene" uid="uid://cbq1tblidtvy7" path="res://shockwave.tscn" id="2_j3cx8"]

[node name="waver_turret" type="Area2D"]
script = ExtResource("1_grjjj")
shockwave = ExtResource("2_j3cx8")

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(22, 190)
texture = ExtResource("1_gqyjf")

[node name="turret_muzzle" type="Marker2D" parent="sprite"]
position = Vector2(-22, -413)

[node name="shoot_timer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]
